need to fix tooltip and label color and line before

--- a/src/components/scan-completion-pie-chart/scan-completion-pie-chart.css
+++ b/src/components/scan-completion-pie-chart/scan-completion-pie-chart.css
@@ -1,5 +1,5 @@
 /* that's make the labels with border radius */
-.canvas-legend ul li span {
+.something-crazy ul li span {
   border-radius: 10px; 
   padding: 0 10px;
 }
