remove inline css

--- a/src/components/scan-completion-pie-chart/scan-completion-pie-chart.css
+++ b/src/components/scan-completion-pie-chart/scan-completion-pie-chart.css
@@ -1,4 +1,4 @@
-/* that's make the labels with border radius */
+/* that's should make the labels with border radius */
 .something-crazy ul li span {
   border-radius: 10px; 
   padding: 0 10px;
